Fixed table headers issue,fixed css issue,added subclass feature

--- a/ui/src/app/schema-details/schema-details.component.css
+++ b/ui/src/app/schema-details/schema-details.component.css
@@ -18,3 +18,14 @@ a:hover {
 .th-style {
   background-color: #c7cbce;
 }
+span {
+  font-size: 20px;
+}
+
+.table td,
+.table th {
+  border-top: none;
+}
+/* h1 {
+  font-size: 22px !important;
+} */
