Modified Css, schema-details modified for display of superclasses

--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -76,7 +76,7 @@ pre {
   --------------------------------------------------*/
 
 #mainContent {
-  border-bottom: solid 1px #cccccc;
+  /* border-bottom: solid 1px #cccccc; */
   text-align: left;
 }
 #footer {
