--- a/ui/src/app/search-result/search-result.component.css
+++ b/ui/src/app/search-result/search-result.component.css
@@ -15,3 +15,15 @@ p {
 .box-style:hover {
   background-color: #ebebeb;
 }
+
+h1 {
+  margin-bottom: -20px !important;
+  /* border: 1px solid purple; */
+  text-align: center;
+}
+.error-style {
+  box-shadow: 1px -1px 12px 0px purple;
+  padding-left: 25px;
+  margin-top: 60px;
+  padding-top: 2px;
+}
