fixed table headers for classes which don't have either superclasses or their properties

--- a/ui/src/app/schema-details/schema-details.component.html
+++ b/ui/src/app/schema-details/schema-details.component.html
@@ -101,7 +101,10 @@
         </tbody>
       </table>
       <table
-        *ngIf="(classDetail | async)?.baseClass.properties.length == 0"
+        *ngIf="
+          (classDetail | async)?.baseClass.properties.length == 0 &&
+          (classDetail | async)?.superClasses.length != 0
+        "
         class="table table-striped"
       >
         <thead>
@@ -119,10 +122,7 @@
               </tr> -->
         </thead>
         <tbody *ngFor="let supClass of (classDetail | async)?.superClasses">
-          <tr
-            class="th-style tbody-style"
-            *ngIf="supClass.properties.length != 0"
-          >
+          <tr class="th-style tbody-style">
             Properties inherited from
             <a [routerLink]="['/', supClass.label]">{{ supClass.label }} </a>
           </tr>
