--- a/ui/src/app/data-models/data-models.component.css
+++ b/ui/src/app/data-models/data-models.component.css
@@ -1,8 +1,10 @@
 .example-card {
   max-width: 400px;
   display: inline-block;
-  margin: 20px;
+  /* margin: 20px; */
   min-width: 400px;
+  margin-left: 3px;
+  background-color: #bfefff;
 }
 
 .example-header-image {
@@ -10,7 +12,7 @@
   background-size: cover;
 }
 .para-heading {
-  text-align: center;
+  /* text-align: center; */
   font-size: 26px;
   font-weight: 600;
 }
@@ -21,4 +23,7 @@ button {
   color: white;
   border-radius: 7px;
   border: none;
+}
+i {
+  color: green;
 }
