--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -19,15 +19,15 @@
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
-        data-target="#navbarsExampleDefault"
-        aria-controls="navbarsExampleDefault"
+        data-target="#myNavbar"
+        aria-controls="myNavbar"
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a
