--- a/ui/src/app/classes/classes.component.css
+++ b/ui/src/app/classes/classes.component.css
@@ -1,11 +1,10 @@
 a:link,
 a:visited {
-  /* color: #660000; */
-  /* color: black; */
-  /* color: #104e8b; */
-  color: #0d1f50;
-  text-decoration: none;
-  /* border-bottom: dotted 1px #660000; */
+  /* color:#0d1f50; */
+  color: #003f87;
+  /* text-decoration: none; */
+  border-bottom: dotted 1px #003f87;
+  transition: color 0.2s;
 }
 a:hover {
   border-bottom: none;
