--- a/ui/src/app/data-models/data-models.component.html
+++ b/ui/src/app/data-models/data-models.component.html
@@ -17,10 +17,13 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button [routerLink]="['/', model.label]">
+        <!-- <button mat-button [routerLink]="['/', model.label]"> -->
+        <button mat-button [routerLink]="['/datamodels', model.label]">
           More Details
         </button>
       </mat-card-actions>
     </mat-card>
+    &nbsp;
+    <br />
   </div>
 </section>
