--- a/ui/src/app/properties/properties.component.css
+++ b/ui/src/app/properties/properties.component.css
@@ -3,9 +3,12 @@ a:visited {
   /* color: #660000; */
   /* color: black; */
   /* color: #104e8b; */
-  color: #0d1f50;
-  text-decoration: none;
-  /* border-bottom: dotted 1px #660000; */
+  /* color: #0d1f50; */
+  color: #003f87;
+  /* text-decoration: none; */
+  border-bottom: dotted 1px #003f87;
+  transition: color 0.2s;
+  transition: all 0.2s;
 }
 a:hover {
   border-bottom: none;
