Added css for Data-models,Updated headings, added value to the searchbox for the autocopmlete, fixed view for expected Type

--- a/ui/src/app/data-models/data-model-domain/data-model-domain.component.html
+++ b/ui/src/app/data-models/data-model-domain/data-model-domain.component.html
@@ -1,9 +1,11 @@
 <section id="domain_name_section" class="container">
   <div id="mainContent">
-    <h1>List of Domain Names</h1>
-    <p>
+    <h1>List of DataModels belonging to the {{ value }} domain</h1>
+    <br />
+    <!-- <p>
       The table here shows the list of domainNames available with description
-    </p>
+    </p> -->
+    <!-- <p>Domain : {{value}}</p> -->
     <br />
     <table class="table table-striped">
       <thead>
