--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -23,11 +23,16 @@
         aria-controls="myNavbar"
         aria-expanded="false"
         aria-label="Toggle navigation"
+        (click)="toggleNavbar()"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="myNavbar">
+      <div
+        class="collapse navbar-collapse"
+        id="myNavbar"
+        [ngClass]="{ show: navbarOpen }"
+      >
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a
