--- a/ui/src/app/classes/classes.component.html
+++ b/ui/src/app/classes/classes.component.html
@@ -1,28 +1,26 @@
-<section id="schema_class_section" class="container">
-  <div id="mainContent">
-    <h1>List of Classes</h1>
-    <p>The table here shows the list of classes available with description</p>
-    <br />
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th scope="col">Class</th>
-          <th scope="col">Description</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let class of classes | async; index as i">
-          <td>
-            <a [routerLink]="['/', class.label]"
-              ><ngb-highlight [result]="class.label"></ngb-highlight>
-            </a>
-          </td>
+<section id="schema_class_section" class="container content">
+  <h1>List of Classes</h1>
+  <p>The table here shows the list of classes available with description</p>
+  <br />
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Class</th>
+        <th scope="col">Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let class of classes | async; index as i">
+        <td>
+          <a [routerLink]="['/', class.label]"
+            ><ngb-highlight [result]="class.label"></ngb-highlight>
+          </a>
+        </td>
 
-          <td>
-            <ngb-highlight [result]="class.comment"></ngb-highlight>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+        <td>
+          <ngb-highlight [result]="class.comment"></ngb-highlight>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </section>
