--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -1,21 +1,18 @@
-<div class="jumbotron">
-  <div class="container content-style">
-    <h1 class="display-3">IUDX Vocabulary</h1>
-    <p>
-      voc.iudx.org.in is a collaborative vocabulary set detailing schemas for
-      structured data exchanges and IUDX APIs.
-    </p>
-    <p>
-      voc.iudx.org.in vocabulary is essentially based on JSON-LD markup and
-      intended to be used with IUDX APIs and data exchange.
-    </p>
-    <p>
-      This allows intelligent applications and data consumers to understand
-      semantic meaning of attributes and entities entailing the IUDX
-      specification.
-    </p>
-  </div>
+<div class="jumbotron container-fluid content-style">
+  <h1>IUDX Vocabulary</h1>
+  <p>
+    voc.iudx.org.in is a collaborative vocabulary set detailing schemas for
+    structured data exchanges and IUDX APIs.
+  </p>
+  <p>
+    voc.iudx.org.in vocabulary is essentially based on JSON-LD markup and
+    intended to be used with IUDX APIs and data exchange.
+  </p>
+  <p>
+    This allows intelligent applications and data consumers to understand
+    semantic meaning of attributes and entities entailing the IUDX
+    specification.
+  </p>
 </div>
-
 <hr />
 <app-footer></app-footer>
