--- a/ui/src/app/schema-details/schema-details.component.html
+++ b/ui/src/app/schema-details/schema-details.component.html
@@ -1,199 +1,199 @@
-<section id="schema_class_section" class="container">
-  <div id="mainContent">
-    <!--
+<section id="schema_class_section" class="container content">
+  <!-- <div id="mainContent"> -->
+  <!--
       Render class table if class
     -->
-    <div *ngIf="classView">
-      <strong
-        *ngFor="let cls of (classDetail | async)?.heirarchy; let i = index"
+  <div *ngIf="classView">
+    <br />
+    <br />
+    <strong *ngFor="let cls of (classDetail | async)?.heirarchy; let i = index">
+      <a
+        *ngIf="i < (classDetail | async)?.heirarchy.length - 1"
+        [routerLink]="['/', cls]"
       >
-        <a
-          *ngIf="i < (classDetail | async)?.heirarchy.length - 1"
-          [routerLink]="['/', cls]"
-        >
-          {{ cls }} &nbsp;&#8658;
-        </a>
-        <a
-          *ngIf="i >= (classDetail | async)?.heirarchy.length - 1"
-          [routerLink]="['/', cls]"
-        >
-          {{ cls }}
-        </a>
-      </strong>
-      <p>
-        {{ (classDetail | async)?.baseClass.comment }}
-      </p>
+        {{ cls }} &nbsp;&#8658;
+      </a>
+      <a
+        *ngIf="i >= (classDetail | async)?.heirarchy.length - 1"
+        [routerLink]="['/', cls]"
+      >
+        {{ cls }}
+      </a>
+    </strong>
+    <p>
+      {{ (classDetail | async)?.baseClass.comment }}
+    </p>
+    <br />
+
+    <table
+      *ngIf="(classDetail | async)?.baseClass.properties.length != 0"
+      class="table"
+    >
       <br />
+      <thead>
+        <tr class="th-style">
+          <th scope="col">Property</th>
 
-      <table
-        *ngIf="(classDetail | async)?.baseClass.properties.length != 0"
-        class="table"
-      >
-        <br />
-        <thead>
-          <tr class="th-style">
-            <th scope="col">Property</th>
-
-            <th scope="col">Expected Type</th>
-            <th scope="col">Description</th>
-          </tr>
-          <!-- <tr class="th-style tbody-style">
+          <th scope="col">Expected Type</th>
+          <th scope="col">Description</th>
+        </tr>
+        <!-- <tr class="th-style tbody-style">
             Properties of
             {{
               (classDetail | async)?.baseClass.label
             }}
           </tr> -->
-        </thead>
+      </thead>
 
-        <tbody>
-          <tr class="th-style tbody-style">
-            <td colspan="3">
-              Properties of
-              {{ (classDetail | async)?.baseClass.label }}
-            </td>
-          </tr>
+      <tbody>
+        <tr class="th-style tbody-style">
+          <td colspan="3">
+            Properties of
+            {{ (classDetail | async)?.baseClass.label }}
+          </td>
+        </tr>
 
-          <tr
-            *ngFor="let property of (classDetail | async)?.baseClass.properties"
-          >
-            <td>
-              <a [routerLink]="['/', property.label]"
-                ><ngb-highlight [result]="property.label"></ngb-highlight>
-              </a>
-            </td>
-            <td>
-              <a *ngFor="let tp of property.type" [routerLink]="['/', tp]"
-                ><ngb-highlight [result]="tp"></ngb-highlight>
-                <br />
-              </a>
-            </td>
-            <td>
-              <ngb-highlight [result]="property.comment"></ngb-highlight>
-            </td>
-          </tr>
-        </tbody>
-        <tbody *ngFor="let supClass of (classDetail | async)?.superClasses">
-          <tr
-            class="th-style tbody-style"
-            *ngIf="supClass.properties.length != 0"
-          >
-            Properties inherited from
-            <a [routerLink]="['/', supClass.label]">{{ supClass.label }} </a>
-          </tr>
-
-          <tr *ngFor="let property of supClass.properties">
-            <td>
-              <a [routerLink]="['/', property.label]"
-                ><ngb-highlight [result]="property.label"></ngb-highlight>
-              </a>
-            </td>
-            <td>
-              <a *ngFor="let tp of property.type" [routerLink]="['/', tp]"
-                ><ngb-highlight [result]="tp"></ngb-highlight>
-                <br />
-              </a>
-            </td>
-
-            <td>
-              <ngb-highlight [result]="property.comment"></ngb-highlight>
-            </td>
-          </tr>
-          <br />
-        </tbody>
-      </table>
-      <table
-        *ngIf="(classDetail | async)?.baseClass.properties.length == 0"
-        class="table"
-      >
-        <thead
-          [ngClass]="{
-            'display-none':
-              ((classDetail | async)?.baseClass.properties.length == 0 &&
-                (classDetail | async)?.superClasses.length) == 0
-          }"
+        <tr
+          *ngFor="let property of (classDetail | async)?.baseClass.properties"
         >
-          <tr class="th-style">
-            <th scope="col">Property</th>
-
-            <th scope="col">Expected Type</th>
-            <th scope="col">Description</th>
-          </tr>
-        </thead>
-        <tbody *ngFor="let supClass of (classDetail | async)?.superClasses">
-          <tr
-            class="th-style tbody-style"
-            *ngIf="supClass.properties.length != 0"
-          >
-            Properties inherited from
-            <a [routerLink]="['/', supClass.label]">{{ supClass.label }} </a>
-          </tr>
-
-          <tr *ngFor="let property of supClass.properties">
-            <td>
-              <a [routerLink]="['/', property.label]"
-                ><ngb-highlight [result]="property.label"></ngb-highlight>
-              </a>
-            </td>
-            <td>
-              <a *ngFor="let tp of property.type" [routerLink]="['/', tp]"
-                ><ngb-highlight [result]="tp"></ngb-highlight>
-              </a>
+          <td>
+            <a [routerLink]="['/', property.label]"
+              ><ngb-highlight [result]="property.label"></ngb-highlight>
+            </a>
+          </td>
+          <td>
+            <a *ngFor="let tp of property.type" [routerLink]="['/', tp]"
+              ><ngb-highlight [result]="tp"></ngb-highlight>
               <br />
-            </td>
+            </a>
+          </td>
+          <td>
+            <ngb-highlight [result]="property.comment"></ngb-highlight>
+          </td>
+        </tr>
+      </tbody>
+      <tbody *ngFor="let supClass of (classDetail | async)?.superClasses">
+        <tr
+          class="th-style tbody-style"
+          *ngIf="supClass.properties.length != 0"
+        >
+          Properties inherited from
+          <a [routerLink]="['/', supClass.label]">{{ supClass.label }} </a>
+        </tr>
 
-            <td>
-              <ngb-highlight [result]="property.comment"></ngb-highlight>
-            </td>
-          </tr>
-          <br />
-        </tbody>
-      </table>
-    </div>
+        <tr *ngFor="let property of supClass.properties">
+          <td>
+            <a [routerLink]="['/', property.label]"
+              ><ngb-highlight [result]="property.label"></ngb-highlight>
+            </a>
+          </td>
+          <td>
+            <a *ngFor="let tp of property.type" [routerLink]="['/', tp]"
+              ><ngb-highlight [result]="tp"></ngb-highlight>
+              <br />
+            </a>
+          </td>
 
-    <!--
+          <td>
+            <ngb-highlight [result]="property.comment"></ngb-highlight>
+          </td>
+        </tr>
+        <br />
+      </tbody>
+    </table>
+    <table
+      *ngIf="(classDetail | async)?.baseClass.properties.length == 0"
+      class="table"
+    >
+      <thead
+        [ngClass]="{
+          'display-none':
+            ((classDetail | async)?.baseClass.properties.length == 0 &&
+              (classDetail | async)?.superClasses.length) == 0
+        }"
+      >
+        <tr class="th-style">
+          <th scope="col">Property</th>
+
+          <th scope="col">Expected Type</th>
+          <th scope="col">Description</th>
+        </tr>
+      </thead>
+      <tbody *ngFor="let supClass of (classDetail | async)?.superClasses">
+        <tr
+          class="th-style tbody-style"
+          *ngIf="supClass.properties.length != 0"
+        >
+          Properties inherited from
+          <a [routerLink]="['/', supClass.label]">{{ supClass.label }} </a>
+        </tr>
+
+        <tr *ngFor="let property of supClass.properties">
+          <td>
+            <a [routerLink]="['/', property.label]"
+              ><ngb-highlight [result]="property.label"></ngb-highlight>
+            </a>
+          </td>
+          <td>
+            <a *ngFor="let tp of property.type" [routerLink]="['/', tp]"
+              ><ngb-highlight [result]="tp"></ngb-highlight>
+            </a>
+            <br />
+          </td>
+
+          <td>
+            <ngb-highlight [result]="property.comment"></ngb-highlight>
+          </td>
+        </tr>
+        <br />
+      </tbody>
+    </table>
+  </div>
+
+  <!--
       Render property table if property
     -->
-    <div *ngIf="propertyView">
-      <h1>{{ (propertyDetail | async)?.label }}</h1>
-      <p>
-        {{ (propertyDetail | async)?.comment }}
-      </p>
-      <br />
-      <table class="table">
-        <thead>
-          <tr>
-            <th class="th-style" scope="col">Expected values</th>
-          </tr>
-        </thead>
-        <tbody id="">
-          <tr *ngFor="let tp of (propertyDetail | async)?.type">
-            <td>
-              <a [routerLink]="['/', tp]"
-                ><ngb-highlight [result]="tp"></ngb-highlight>
-              </a>
-            </td>
-            <br />
-          </tr>
-        </tbody>
-      </table>
+  <div class="display-style" *ngIf="propertyView">
+    <h1>{{ (propertyDetail | async)?.label }}</h1>
+    <p>
+      {{ (propertyDetail | async)?.comment }}
+    </p>
+    <br />
+    <table class="table">
+      <thead>
+        <tr>
+          <th class="th-style" scope="col">Expected values</th>
+        </tr>
+      </thead>
+      <tbody id="">
+        <tr *ngFor="let tp of (propertyDetail | async)?.type">
+          <td>
+            <a [routerLink]="['/', tp]"
+              ><ngb-highlight [result]="tp"></ngb-highlight>
+            </a>
+          </td>
+          <br />
+        </tr>
+      </tbody>
+    </table>
 
-      <table class="table">
-        <thead>
-          <tr>
-            <th class="th-style" scope="col">Used on these types</th>
-          </tr>
-        </thead>
+    <table class="table">
+      <thead>
+        <tr>
+          <th class="th-style" scope="col">Used on these types</th>
+        </tr>
+      </thead>
 
-        <tbody>
-          <tr *ngFor="let class of (propertyDetail | async)?.domains">
-            <td>
-              <a [routerLink]="['/', class]"
-                ><ngb-highlight [result]="class"></ngb-highlight>
-              </a>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+      <tbody>
+        <tr *ngFor="let class of (propertyDetail | async)?.domains">
+          <td>
+            <a [routerLink]="['/', class]"
+              ><ngb-highlight [result]="class"></ngb-highlight>
+            </a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
+  <!-- </div> -->
 </section>
