--- a/ui/src/app/search-result/search-result.component.css
+++ b/ui/src/app/search-result/search-result.component.css
@@ -31,3 +31,12 @@ h1 {
 a:hover {
   text-decoration: none;
 }
+
+.content {
+  text-align: left;
+  /* margin: 0 auto !important;
+   padding: 0 0.5em;
+   font-size: 100%;
+   position: absolute;
+   top: 15%; */
+}
