--- a/ui/src/app/search-result/search-result.component.html
+++ b/ui/src/app/search-result/search-result.component.html
@@ -1,24 +1,26 @@
 <section id="search-result-section" class="container">
-  <div id="mainContent">
-    <div *ngIf="results">
-      <div
-        *ngFor="let data of searchDetail | async"
-        ngHoverClass="hover"
-        id="search-results"
-        class="box-style"
+  <!-- <div id="mainContent"> -->
+  <br />
+  <br />
+  <div *ngIf="results" class="content">
+    <div
+      *ngFor="let data of searchDetail | async"
+      ngHoverClass="hover"
+      id="search-results"
+      class="box-style"
+    >
+      <a [routerLink]="['/', data.label]"
+        ><h3>{{ _url }}{{ data.label }}</h3></a
       >
-        <a [routerLink]="['/', data.label]"
-          ><h3>{{ _url }}{{ data.label }}</h3></a
-        >
 
-        <a [routerLink]="['/', data.label]"
-          ><h2>{{ data.label }}</h2></a
-        >
-        <p>{{ data.comment }}</p>
-        <br />
-      </div>
+      <a [routerLink]="['/', data.label]"
+        ><h2>{{ data.label }}</h2></a
+      >
+      <p>{{ data.comment }}</p>
+      <br />
     </div>
   </div>
+  <!-- </div> -->
   <div class="error-style" *ngIf="error">
     <br />
     <h1>Oops!</h1>
