--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <div id="container">
   <div id="intro">
-    <nav id="nav-style" class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav id="nav-style" class="navbar navbar-expand-lg navbar-dark bg-dark">
       <img
         style="padding-right:10px;"
-        class="img-style"
+        class="img-style img-fluid"
         alt="IUDX-Logo"
         src="../../assets/iudx_logo.png"
       />
@@ -16,7 +16,7 @@
         >IUDX Vocabulary</a
       >
       <button
-        class="navbar-toggler"
+        class="navbar-toggler pull-right"
         type="button"
         data-toggle="collapse"
         data-target="#myNavbar"
